Add date picker and login styling

--- a/app/assets/stylesheets/series.css.scss
+++ b/app/assets/stylesheets/series.css.scss
@@ -63,3 +63,11 @@ h1, h2, h3, h4, h5, h6 {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
+
+.date-select {
+  margin-top: 20px;
+  text-align: right;
+}
+.choose-date {
+  max-width: 150px;
+}
