--- a/app/views/series/show.html.erb
+++ b/app/views/series/show.html.erb
@@ -1,23 +1,30 @@
 <% breadcrumb :series, @series %>
 
-<h1>
-  <%= @series.display_name %>
-  <% if current_user %>
-    <span class="add-dashboard-item dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Add to Dashboard<span class="caret"></span></a>
-      <ul class="dropdown-menu">
-        <%= simple_form_for @dashboard_item do |f| %>
-          <%= f.association :dashboard, collection: @dashboards %>
-          <%= f.input :indicator_id, as: :hidden %>
-          <%= f.input :series_id, as: :hidden %>
-          <%= f.button :submit %>
-        <% end %>
-      </ul>
-    </span>
-  <% else %>
-    <%= link_to "Sign up to add this to your dashboard", new_user_registration_path, :class => 'add-dashboard-item'  %>
+<div class="row">
+  <h1 class="col-xs-12 col-md-6">
+    <%= @series.display_name %>
+    <% if current_user %>
+      <span class="add-dashboard-item dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Add&nbsp;to&nbsp;Dashboard<span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <%= simple_form_for @dashboard_item do |f| %>
+            <%= f.association :dashboard, collection: @dashboards %>
+            <%= f.input :indicator_id, as: :hidden %>
+            <%= f.input :series_id, as: :hidden %>
+            <%= f.button :submit %>
+          <% end %>
+        </ul>
+      </span>
+    <% else %>
+      <%= link_to "Sign up to add this to your dashboard", new_user_registration_path, :class => 'add-dashboard-item'  %>
+    <% end %>
+  </h1>
+  <%= simple_form_for :dates, wrapper: :inline_form, html: {class: 'form-inline col-xs-12 col-md-4 col-md-offset-2 date-select'}, url: series_path, :method => :get do |f| %>
+    <%= f.input :start_date, as: :date_picker, placeholder: @start_date.to_s, wrapper_html: { class: 'choose-date'} %>
+    <%= f.input :end_date, as: :date_picker, placeholder: @end_date.to_s, wrapper_html: { class: 'choose-date'}  %>
+    <%= f.submit 'Go', class: 'btn btn-sm' %>
   <% end %>
-</h1>
+</div>
 
 <%= line_chart @data, library: { title: {text: @series.indicator.name}, yAxis: {title: {text: @series.unit.name}} } %>
 
